// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`integration tests browser rendering renders the ErrorComponent 1`] = `
<AsyncComponentProvider
  asyncContext={
    Object {
      "getNextId": [Function],
      "getState": [Function],
      "resolved": [Function],
    }
  }
  rehydrateState={
    Object {
      "resolved": Object {},
    }
  }
>
  <AsyncComponent />
</AsyncComponentProvider>
`;

exports[`integration tests browser rendering renders the ErrorComponent 2`] = `
<AsyncComponentProvider
  asyncContext={
    Object {
      "getNextId": [Function],
      "getState": [Function],
      "resolved": [Function],
    }
  }
  rehydrateState={
    Object {
      "resolved": Object {},
    }
  }
>
  <AsyncComponent>
    <ErrorComponent
      error={[Error: An error occurred]}
    >
      <div>
        An error occurred
      </div>
    </ErrorComponent>
  </AsyncComponent>
</AsyncComponentProvider>
`;

exports[`integration tests browser rendering renders the LoadingComponent 1`] = `
<AsyncComponentProvider
  asyncContext={
    Object {
      "getNextId": [Function],
      "getState": [Function],
      "resolved": [Function],
    }
  }
  rehydrateState={
    Object {
      "resolved": Object {},
    }
  }
>
  <AsyncComponent>
    <LoadingComponent>
      <div>
        Loading...
      </div>
    </LoadingComponent>
  </AsyncComponent>
</AsyncComponentProvider>
`;

exports[`integration tests render server and client 1`] = `"<div><div><div><span>In Render.</span></div><div>DeferredAsyncBob Loading</div><div><span>In Boundary but outside an AsyncComponent, server render me!</span></div></div></div>"`;

exports[`integration tests render server and client 2`] = `
Object {
  "resolved": Object {
    "1": true,
    "2": true,
    "4": true,
  },
}
`;

exports[`integration tests render server and client 3`] = `
<AsyncComponentProvider
  asyncContext={
    Object {
      "getNextId": [Function],
      "getState": [Function],
      "resolved": [Function],
    }
  }
  rehydrateState={
    Object {
      "resolved": Object {},
    }
  }
>
  <AsyncBob>
    <Bob>
      <div>
        <div>
          <AsyncBobTwo>
            <Bob>
              <div>
                <span>
                  In Render.
                </span>
              </div>
            </Bob>
          </AsyncBobTwo>
          <DeferredAsyncBob>
            <LoadingComponent>
              <div>
                DeferredAsyncBob Loading
              </div>
            </LoadingComponent>
          </DeferredAsyncBob>
          <BoundaryAsyncBob>
            <Bob>
              <div>
                <span>
                  In Boundary but outside an AsyncComponent, server render me!
                </span>
                <AsyncBobThree />
              </div>
            </Bob>
          </BoundaryAsyncBob>
          <ErrorAsyncComponent />
        </div>
      </div>
    </Bob>
  </AsyncBob>
</AsyncComponentProvider>
`;

exports[`integration tests render server and client 4`] = `
<AsyncComponentProvider
  asyncContext={
    Object {
      "getNextId": [Function],
      "getState": [Function],
      "resolved": [Function],
    }
  }
  rehydrateState={
    Object {
      "resolved": Object {},
    }
  }
>
  <AsyncBob>
    <Bob>
      <div>
        <div>
          <AsyncBobTwo>
            <Bob>
              <div>
                <span>
                  In Render.
                </span>
              </div>
            </Bob>
          </AsyncBobTwo>
          <DeferredAsyncBob>
            <Bob>
              <div>
                <span>
                  In Defer.
                </span>
              </div>
            </Bob>
          </DeferredAsyncBob>
          <BoundaryAsyncBob>
            <Bob>
              <div>
                <span>
                  In Boundary but outside an AsyncComponent, server render me!
                </span>
                <AsyncBobThree>
                  <Bob>
                    <div>
                      <span>
                        In Boundary - Do not server render me!
                      </span>
                    </div>
                  </Bob>
                </AsyncBobThree>
              </div>
            </Bob>
          </BoundaryAsyncBob>
          <ErrorAsyncComponent>
            <ErrorComponent
              error={[Error: This always errors]}
            >
              <div>
                This always errors
              </div>
            </ErrorComponent>
          </ErrorAsyncComponent>
        </div>
      </div>
    </Bob>
  </AsyncBob>
</AsyncComponentProvider>
`;

exports[`integration tests server rendering should not render errors 1`] = `""`;
